--- a/public/locales/seo-be.json
+++ b/public/locales/seo-be.json
@@ -2,21 +2,30 @@
   "seo": {
     "index": {
       "title": "Bulwark Fund | Дапамога беларускім добраахвотнікам",
-      "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся!",
+      "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся! | Bulwark Charity Foundation. Support for Belarusian fighters in Ukraine: legal aid, rehabilitation, personnel reserve. Join us!",
       "og_title": "Bulwark Fund | BY / EN",
-      "og_description": "Дапамога беларускім добраахвотнікам ва Украіне. Support for Belarusian volunteers in Ukraine.",
+      "og_description": "Дапамога беларускім добраахвотнікам. Support for Belarusian fighters in Ukraine.",
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Bulwark Fund | BY / EN",
-      "twitter_description": "Дапамога беларускім добраахвотнікам ва Украіне. Support for Belarusian volunteers in Ukraine."
+      "twitter_description": "Дапамога беларускім добраахвотнікам ва Украіне. Support for Belarusian fighters in Ukraine."
     },
     "projects": {
-      "title": "Праекты | Bulwark Fund",
-      "description": "Нашы праекты: поўнае юрыдычнае суправаджэнне, псіхалагічная апора і рэабілітацыя беларускіх добраахвотнікаў ва Украіне.",
-      "og_title": "Нашы праекты | Bulwark Fund",
-      "og_description": "Юрыдычная дапамога, легалізацыя і псіхалагічная падтрымка беларускіх воінаў. Даведайцеся больш пра напрамкі нашай працы.",
+      "title": "Нашы праекты | Our Projects | Bulwark Fund",
+      "description": "Нашы праекты: падтрымка беларускіх добраахвотнікаў. Our projects: support for Belarusian fighters.",
+      "og_title": "Нашы праекты | Our Projects | Bulwark Fund",
+      "og_description": "Юрыдычная дапамога і псіхалагічная падтрымка воінаў. Legal aid and psychological support for fighters.",
       "og_site_name": "Bulwark Fund",
-      "twitter_title": "Нашы праекты | Bulwark Fund",
-      "twitter_description": "Прававы шчыт і псіхалагічная апора для беларускіх добраахвотнікаў."
+      "twitter_title": "Нашы праекты | Our Projects | Bulwark Fund",
+      "twitter_description": "Падтрымка беларускіх добраахвотнікаў ва Украіне. Support for Belarusian fighters in Ukraine."
+    },
+    "history": {
+      "title": "Гістарычны экскурс | Historical Background | Bulwark Fund",
+      "description": "Агульная гісторыя і барацьба за незалежнасць. Shared history and the struggle for independence.",
+      "og_title": "Гістарычны экскурс | Historical Background",
+      "og_description": "Чаму вольная Украіна — гэта залог вольнай Беларусі. Why a free Ukraine is the key to a free Belarus.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Гістарычны экскурс | Historical Background",
+      "twitter_description": "Логіка гісторыі: наша выжыванне ўзаемазалежнае. Logic of history: our survival is interdependent."
     }
   }
 }
