--- a/public/locales/seo-ru.json
+++ b/public/locales/seo-ru.json
@@ -3,20 +3,29 @@
     "index": {
       "title": "Bulwark Fund | Помощь белорусским добровольцам",
       "description": "Благотворительный фонд Bulwark. Поддержка белорусских воинов в Украине: юридическая помощь, реабилитация, кадровый резерв. Присоединяйся!",
-      "og_title": "Bulwark Fund | BY / EN",
-      "og_description": "Помощь белорусским добровольцам в Украине. Support for Belarusian volunteers in Ukraine.",
+      "og_title": "Bulwark Fund | RU",
+      "og_description": "Помощь белорусским добровольцам. Поддержка бойцов в Украине.",
       "og_site_name": "Bulwark Fund",
-      "twitter_title": "Bulwark Fund | BY / EN",
-      "twitter_description": "Помощь белорусским добровольцам в Украине. Support for Belarusian volunteers in Ukraine."
+      "twitter_title": "Bulwark Fund | RU",
+      "twitter_description": "Помощь белорусским добровольцам в Украине."
     },
     "projects": {
-      "title": "Проекты | Bulwark Fund",
-      "description": "Наши проекты: полное юридическое сопровождение, психологическая опора и реабилитация белорусских добровольцев в Украине.",
+      "title": "Наши проекты | Bulwark Fund",
+      "description": "Наши проекты: поддержка белорусских добровольцев. Юридическая помощь и реабилитация воинов.",
       "og_title": "Наши проекты | Bulwark Fund",
-      "og_description": "Юридическая помощь, легализация и психологическая поддержка белорусских воинов. Узнайте больше о направлениях нашей работы.",
+      "og_description": "Юридическая помощь и психологическая поддержка воинов. Узнайте больше о нашей работе.",
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Наши проекты | Bulwark Fund",
-      "twitter_description": "Правовой щит и психологическая опора для белорусских добровольцев."
+      "twitter_description": "Поддержка белорусских добровольцев в Украине."
+    },
+    "history": {
+      "title": "Исторический экскурс | Bulwark Fund",
+      "description": "Общая история и борьба за независимость. Исторические корни нашего союза.",
+      "og_title": "Исторический экскурс | Bulwark Fund",
+      "og_description": "Почему свободная Украина — это залог свободной Беларуси. Логика совместной борьбы.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Исторический экскурс | Bulwark Fund",
+      "twitter_description": "Логика истории: наше выживание взаимозависимо."
     }
   }
 }
