--- a/public/locales/seo-uk.json
+++ b/public/locales/seo-uk.json
@@ -3,20 +3,29 @@
     "index": {
       "title": "Bulwark Fund | Допомога білоруським добровольцям",
       "description": "Благодійний фонд Bulwark. Підтримка білоруських воїнів в Україні: юридична допомога, реабілітація, кадровий резерв. Приєднуйся!",
-      "og_title": "Bulwark Fund | BY / EN",
-      "og_description": "Допомога білоруським добровольцям в Україні. Support for Belarusian volunteers in Ukraine.",
+      "og_title": "Bulwark Fund | UA",
+      "og_description": "Допомога білоруським добровольцям. Підтримка тих, хто бореться за нашу і вашу свободу.",
       "og_site_name": "Bulwark Fund",
-      "twitter_title": "Bulwark Fund | BY / EN",
-      "twitter_description": "Допомога білоруським добровольцям в Україні. Support for Belarusian volunteers in Ukraine."
+      "twitter_title": "Bulwark Fund | UA",
+      "twitter_description": "Допомога білоруським добровольцям в Україні."
     },
     "projects": {
-      "title": "Проєкти | Bulwark Fund",
-      "description": "Наші проєкти: повний юридичний супровід, психологічна опора та реабілітація білоруських добровольців в Україні.",
+      "title": "Наші проєкти | Bulwark Fund",
+      "description": "Наші проєкти: підтримка білоруських добровольців. Юридична допомога та реабілітація воїнів.",
       "og_title": "Наші проєкти | Bulwark Fund",
-      "og_description": "Юридична допомога, легалізація та психологічна підтримка білоруських воїнів. Дізнайтеся більше про напрямки нашої роботи.",
+      "og_description": "Юридична допомога та психологічна підтримка воїнів. Дізнайтеся більше про нашу діяльність.",
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Наші проєкти | Bulwark Fund",
-      "twitter_description": "Правовий щит та психологічна опора для білоруських добровольців."
+      "twitter_description": "Підтримка білоруських добровольців в Україні."
+    },
+    "history": {
+      "title": "Історичний екскурс | Bulwark Fund",
+      "description": "Спільна історія та боротьба за незалежність. Історичне коріння нашого союзу.",
+      "og_title": "Історичний екскурс | Bulwark Fund",
+      "og_description": "Чому вільна Україна — це запорука вільної Білорусі. Логіка спільної історії.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Історичний екскурс | Bulwark Fund",
+      "twitter_description": "Логіка історії: наше виживання взаємозалежне."
     }
   }
 }
