--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -348,5 +348,11 @@
     "text": "Мы используем файлы cookie для улучшения работы сайта. Оставаясь на сайте, вы соглашаетесь с нашей",
     "policy_link": "политикой конфиденциальности",
     "accept": "Согласен"
+  },
+  "reports": {
+    "page_title": "Отчеты",
+    "loading": "Загрузка...",
+    "error": "Не удалось загрузить отчеты. Пожалуйста, попробуйте позже.",
+    "more_btn": "Больше"
   }
 }
