--- a/public/locales/seo-be.json
+++ b/public/locales/seo-be.json
@@ -26,6 +26,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Гістарычны экскурс | Historical Background",
       "twitter_description": "Логіка гісторыі: наша выжыванне ўзаемазалежнае. Logic of history: our survival is interdependent."
+    },
+    "reports": {
+      "title": "Справаздачы | Reports | Bulwark Fund",
+      "description": "Фінансавыя і праграмныя справаздачы фонду Bulwark. Празрыстасць нашай працы. | Financial and program reports of the Bulwark Fund. Transparency of our work.",
+      "og_title": "Справаздачы | Reports | Bulwark Fund",
+      "og_description": "Празрыстасць і справаздачнасць у дапамозе беларускім добраахвотнікам. Transparency and accountability in helping Belarusian volunteers.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Справаздачы | Reports | Bulwark Fund",
+      "twitter_description": "Даведайцеся, як мы выкарыстоўваем вашы ахвяраванні для падтрымкі воінаў. Learn how we use your donations to support fighters."
     }
   }
 }
