--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -348,5 +348,11 @@
     "text": "Ми використовуємо файли cookie для покращення роботи сайту. Залишаючись на сайті, ви погоджуєтеся з нашою",
     "policy_link": "політикою конфіденційності",
     "accept": "Згоден"
+  },
+  "reports": {
+    "page_title": "Звіти",
+    "loading": "Завантаження...",
+    "error": "Не вдалося завантажити звіти. Будь ласка, спробуйте пізніше.",
+    "more_btn": "Більше"
   }
 }
