--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -55,7 +55,7 @@
     "slogan_text": "Два народы — адна свабода",
     "conclusion_1": "Сёння яны разам будуюць фонд «Bulwark», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага.",
     "conclusion_highlight": "«Мы вяртаемся. Мы будуем новую Беларусь!»",
-    
+
     "title_1": "Гістарычны",
     "title_2": "экскурс",
     "sec1_lead": "На працягу стагоддзяў Беларусь і Украіна існавалі побач, падзяляючы падобныя лёсы, выпрабаванні і пагрозы. Абедзве нацыі прайшлі праз перыяды бездзяржаўнасці і спробаў знішчыць іх права на будучыню.",
@@ -354,5 +354,11 @@
     "text": "Мы выкарыстоўваем файлы cookie для паляпшэння працы сайта. Застаючыся на сайце, вы згаджаецеся з нашай",
     "policy_link": "палітыкай прыватнасці",
     "accept": "Згодзен"
+  },
+  "reports": {
+    "page_title": "Справаздачы",
+    "loading": "Загрузка...",
+    "error": "Не атрымалася загрузіць справаздачы. Калі ласка, паспрабуйце пазней.",
+    "more_btn": "Больш"
   }
 }
