--- a/public/locales/seo-en.json
+++ b/public/locales/seo-en.json
@@ -26,6 +26,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Historical Background | Bulwark Fund",
       "twitter_description": "Logic of history: our survival is interdependent."
+    },
+    "reports": {
+      "title": "Reports | Bulwark Fund",
+      "description": "Financial and program reports of the Bulwark Fund. Transparency and accountability of our operations.",
+      "og_title": "Reports | Bulwark Fund",
+      "og_description": "Transparency and accountability in helping Belarusian volunteers. See how your support makes a difference.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Reports | Bulwark Fund",
+      "twitter_description": "Learn how we use your donations to support Belarusian fighters."
     }
   }
 }
