feat: optimize materials loading and synchronize modal i18n logic

--- a/public/locales/seo-en.json
+++ b/public/locales/seo-en.json
@@ -35,6 +35,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Reports | Bulwark Fund",
       "twitter_description": "Learn how we use your donations to support Belarusian fighters."
+    },
+    "materials": {
+      "title": "Materials | Knowledge Base | Bulwark Fund",
+      "description": "Knowledge base for Belarusian volunteers: legalization in Ukraine, document recovery, safety, and legal protection.",
+      "og_title": "Materials | Knowledge Base | Bulwark Fund",
+      "og_description": "Legal instructions and useful materials for volunteers' rights protection.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Materials | Knowledge Base",
+      "twitter_description": "Step-by-step legal instructions for fighters in exile."
     }
   }
 }
