--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -329,7 +329,7 @@
     "label": "Матеріали",
     "title": "База знань",
     "read_more": "Читати матеріал",
-    "back_to_list": "Назад да списку"
+    "back_to_list": "Назад до списку"
   },
   "privacy": {
     "page_title": "Політика конфіденційності | Bulwark",
