--- a/public/locales/seo-be.json
+++ b/public/locales/seo-be.json
@@ -35,6 +35,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Справаздачы | Reports | Bulwark Fund",
       "twitter_description": "Даведайцеся, як мы выкарыстоўваем вашы ахвяраванні для падтрымкі воінаў. Learn how we use your donations to support fighters."
+    },
+    "materials": {
+      "title": "Матеріали | Knowledge Base | Bulwark Fund",
+      "description": "База знань для білоруських добровольців: легалізація в Україні, відновлення документів, безпека та правовий захист.",
+      "og_title": "Матеріали | База знань | Bulwark Fund",
+      "og_description": "Юридичні інструкції та корисні матеріали з легалізації та захисту прав добровольців.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Матеріали | Knowledge Base",
+      "twitter_description": "Покрокові інструкції з юридичних питань для воїнів в еміграції."
     }
   }
 }
