add head with seo to contacts.html, add keys to lang jsons

--- a/public/locales/seo-be.json
+++ b/public/locales/seo-be.json
@@ -44,6 +44,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Матеріали | Knowledge Base",
       "twitter_description": "Покрокові інструкції з юридичних питань для воїнів в еміграції."
+    },
+    "contacts": {
+      "title": "Кантакты | Contacts | Bulwark Fund",
+      "description": "Звяжыцеся з фондам Bulwark. Кантакты, банкаўскія рэквізіты і крыптавалютныя рахункі для дапамогі беларускім добраахвотнікам. | Contact Bulwark Fund. Contact details, bank requisites, and cryptocurrency accounts to support Belarusian volunteers.",
+      "og_title": "Кантакты і рэквізіты | Contacts & Requisites",
+      "og_description": "Кантакты для сувязі і ўсе спосабы падтрымкі беларускіх добраахвотнікаў. | Contact info and all ways to support Belarusian volunteers.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Кантакты | Bulwark Fund",
+      "twitter_description": "Кантакты і рэквізіты для дапамогі. | Contact and support details."
     }
   }
 }
