--- a/public/locales/seo-en.json
+++ b/public/locales/seo-en.json
@@ -44,6 +44,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Materials | Knowledge Base",
       "twitter_description": "Step-by-step legal instructions for fighters in exile."
+    },
+    "contacts": {
+      "title": "Contacts | Bulwark Fund",
+      "description": "Contact Bulwark Fund. Contact details, bank requisites, and cryptocurrency accounts to support Belarusian volunteers.",
+      "og_title": "Contacts & Requisites | Bulwark Fund",
+      "og_description": "Contact info and all ways to support Belarusian volunteers fighting for Ukraine.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Contacts | Bulwark Fund",
+      "twitter_description": "Contact and support details for Belarusian volunteers."
     }
   }
 }
