--- a/public/locales/seo-ru.json
+++ b/public/locales/seo-ru.json
@@ -44,6 +44,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Материалы | Knowledge Base",
       "twitter_description": "Пошаговые инструкции по юридическим вопросам для воинов в эмиграции."
+    },
+    "contacts": {
+      "title": "Контакты | Contacts | Bulwark Fund",
+      "description": "Свяжитесь с фондом Bulwark. Контакты, банковские реквизиты и криптовалютные счета для помощи белорусским добровольцам. | Contact Bulwark Fund. Contact details, bank requisites, and cryptocurrency accounts to support Belarusian volunteers.",
+      "og_title": "Контакты и реквизиты | Contacts & Requisites",
+      "og_description": "Контакты для связи и все способы поддержки белорусских добровольцев. | Contact info and all ways to support Belarusian volunteers.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Контакты | Bulwark Fund",
+      "twitter_description": "Контакты и реквизиты для помощи. | Contact and support details."
     }
   }
 }
