--- a/public/locales/seo-uk.json
+++ b/public/locales/seo-uk.json
@@ -44,6 +44,15 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Матеріали | Knowledge Base",
       "twitter_description": "Покрокові інструкції з юридичних питань для воїнів в еміграції."
+    },
+    "contacts": {
+      "title": "Контакти | Contacts | Bulwark Fund",
+      "description": "Зв'яжіться з фондом Bulwark. Контакти, банківські реквізити та криптовалютні рахунки для допомоги білоруським добровольцям. | Contact Bulwark Fund. Contact details, bank requisites, and cryptocurrency accounts to support Belarusian volunteers.",
+      "og_title": "Контакти та реквізити | Contacts & Requisites",
+      "og_description": "Контакти для зв'язку та всі способи підтримкі білоруських добровольців. | Contact info and all ways to support Belarusian volunteers.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Контакти | Bulwark Fund",
+      "twitter_description": "Контакти та реквізити для допомоги. | Contact and support details."
     }
   }
 }
