refactor: modular i18n structure, global translations, and full SEO integration of contacts html

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -122,8 +122,8 @@
     "title": "Фінансаванне перамогі",
     "support_fund": "Падтрымаць фонд",
     "support_fund_text": "Адміністрацыйныя выдаткі, юрыдычны шчыт, лагістыка і развіццё інстытуцыі. Трывалая база для нашай працы.",
-    "help_soldiers": "Дапамога байцам",
-    "help_soldiers_text": "Наўпроставая закупка рыштунку, медыцыны і тэхнічных сродкаў для беларускіх добраахвотнікаў на фронце.",
+    "help_soldiers": "Падтрымаць байцоў",
+    "help_soldiers_text": "Легалізацыя, юрыдычная, псіхалагічная дапамога і сацыяльная рэабілітацыя",
     "requisites_btn": "Рэквізіты",
     "alert_enter_amount": "Калі ласка, увядзіце суму",
     "alert_redirect": "Пераход да аплаты:",
@@ -156,28 +156,6 @@
     "copy": "Капіяваць",
     "copied": "Скапіявана!",
     "close": "Закрыць"
-  },
-  "contacts": {
-    "title": "Кантакты",
-    "support_bot": "Бот падтрымкі",
-    "urgent_link": "Тэрміновая сувязь",
-    "confidential": "Канфідэнцыйна",
-    "page_title": "Кантакты | Bulwark",
-    "subtitle": "Звязацца і падтрымаць",
-    "main_title": "Кантакты і рэквізіты",
-    "sidebar_title": "Кантакты",
-    "email_label": "Пошта",
-    "phone_label": "Тэлефон / Signal",
-    "help_title": "Патрэбна дапамога?",
-    "help_desc": "Для беларускіх добраахвотнікаў: прававая падтрымка, псіхалагічная дапамога, матэрыяльная падтрымка.",
-    "open_bot": "Адкрыць Telegram-бот",
-    "open_signal": "Звязацца праз Signal",
-    "confidential_note": "*Канфідэнцыйнасць і бяспека гарантаваныя",
-    "fund_support": "Падтрымаць фонд",
-    "fighters_support": "Падтрымаць байцоў",
-    "payment_purpose_label": "Назва плацяжу:",
-    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
-    "crypto_title": "Крыптавалюты"
   },
 
   "gallery": {
@@ -242,27 +220,13 @@
       "bg_text": "Future"
     }
   },
+  "contacts": {
+    "title": "Кантакты",
+    "support_bot": "Бот падтрымкі",
+    "urgent_link": "Тэрміновая сувязь",
+    "confidential": "Канфідэнцыйна"
+  },
 
-  "foundation": {
-    "title": "Падтрымаць фонд",
-    "description": "Аперацыйная дзейнасць, адміністрацыйныя выдаткі і лагістыка",
-    "purpose": "Благодійний внесок на виконання цілей БФ"
-  },
-  "soldiers": {
-    "title": "Падтрымаць байцоў",
-    "description": "Рыштунак, медыцына і тэхнічныя сродкі для добраахвотнікаў",
-    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
-  },
-  "ui": {
-    "bank_title": "Банкаўскія рэквізіты",
-    "recipient": "Каму:",
-    "edrpou": "Код ЕДРПОУ:",
-    "bank_name": "Назва банка:",
-    "swift": "SWIFT code:",
-    "purpose_label": "Назва плацяжу (пры пераводзе абавязкова):",
-    "accounts_title": "Рахункі для пераводу",
-    "crypto_title": "Крыптавалютныя рахункі"
-  },
   "get_help": {
     "page_title": "Атрымаць дапамогу | Bulwark",
     "tag": "Support Service",
