--- a/public/locales/donations-be.json
+++ b/public/locales/donations-be.json
@@ -20,7 +20,7 @@
   "soldiers": {
     "id": "soldiers",
     "title": "Падтрымаць байцоў",
-    "description": "Рыштунак, медыцына і тэхнічныя сродкі для добраахвотнікаў",
+    "description": "Легалізацыя, юрыдычная, псіхалагічная дапамога і сацыяльная рэабілітацыя",
     "bank_details": {
       "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
       "edrpou": "46082758",
