--- a/public/locales/donations-en.json
+++ b/public/locales/donations-en.json
@@ -20,7 +20,7 @@
   "soldiers": {
     "id": "soldiers",
     "title": "Support the Soldiers",
-    "description": "Equipment, medicine, and technical supplies for volunteers",
+    "description": "Legalization, legal and psychological assistance, and social rehabilitation",
     "bank_details": {
       "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
       "edrpou": "46082758",
