--- a/public/locales/donations-ru.json
+++ b/public/locales/donations-ru.json
@@ -20,7 +20,7 @@
   "soldiers": {
     "id": "soldiers",
     "title": "Поддержать бойцов",
-    "description": "Снаряжение, медицина и технические средства для добровольцев",
+    "description": "Легализация, юридическая, психологическая помощь и социальная реабилитация",
     "bank_details": {
       "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
       "edrpou": "46082758",
