--- a/public/locales/donations-uk.json
+++ b/public/locales/donations-uk.json
@@ -20,7 +20,7 @@
   "soldiers": {
     "id": "soldiers",
     "title": "Підтримати бійців",
-    "description": "Спорядження, медицина та технічні засоби для добровольців",
+    "description": "Легалізація, юридична, психологічна допомога та соціальна реабілітація",
     "bank_details": {
       "recipient": "CO \"CHARITABLE FOUNDATION \"BULWARK\"",
       "edrpou": "46082758",
