--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -119,8 +119,8 @@
     "title": "Фінансування перемоги",
     "support_fund": "Підтримати фонд",
     "support_fund_text": "Адміністративні витрати, юридичний щит, логістика та розвиток інституції. Міцна база для нашої роботи.",
-    "help_soldiers": "Допомога бійцям",
-    "help_soldiers_text": "Пряма закупівля спорядження, медицини та технічних засобів для білоруських добровольців на фронті.",
+    "help_soldiers": "Підтримати бійців",
+    "help_soldiers_text": "Легалізація, юридична, психологічна допомога та соціальна реабілітація",
     "requisites_btn": "Реквізити",
     "alert_enter_amount": "Будь ласка, введіть суму",
     "alert_redirect": "Перехід до оплати:",
@@ -153,28 +153,7 @@
     "copied": "Скопійовано!",
     "close": "Закрити"
   },
-  "contacts": {
-    "title": "Контакти",
-    "support_bot": "Бот підтримки",
-    "urgent_link": "Терміновий зв'язок",
-    "confidential": "Конфіденційно",
-    "page_title": "Контакти | Bulwark",
-    "subtitle": "Зв'язатися та підтримати",
-    "main_title": "Контакти та реквізити",
-    "sidebar_title": "Контакти",
-    "email_label": "Пошта",
-    "phone_label": "Телефон / Signal",
-    "help_title": "Потрібна допомога?",
-    "help_desc": "Для білоруських добровольців: правова підтримка, психологічна допомога, матеріальна підтримка.",
-    "open_bot": "Відкрити Telegram-бот",
-    "open_signal": "Зв'язатися через Signal",
-    "confidential_note": "*Конфіденційність та безпека гарантовані",
-    "fund_support": "Підтримати фонд",
-    "fighters_support": "Підтримати бійців",
-    "payment_purpose_label": "Призначення платежу:",
-    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
-    "crypto_title": "Криптовалюти"
-  },
+
   "gallery": {
     "title_page": "Галерея | Bulwark",
     "copyright_text": "Усі матеріали галереї є інтелектуальною власністю Bulwark. Використання цих матеріалів без дозволу заборонено.",
@@ -238,26 +217,13 @@
       "bg_text": "Future"
     }
   },
-  "foundation": {
-    "title": "Підтримати фонд",
-    "description": "Операційна діяльність, адміністративні витрати та логістика",
-    "purpose": "Благодійний внесок на виконання цілей БФ"
+  "contacts": {
+    "title": "Контакти",
+    "support_bot": "Бот підтримки",
+    "urgent_link": "Терміновий зв'язок",
+    "confidential": "Конфіденційно"
   },
-  "soldiers": {
-    "title": "Підтримати бійців",
-    "description": "Спорядження, медицина та технічні засоби для добровольців",
-    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
-  },
-  "ui": {
-    "bank_title": "Банківські реквізити",
-    "recipient": "Отримувач:",
-    "edrpou": "Код ЄДРПОУ:",
-    "bank_name": "Назва банку:",
-    "swift": "SWIFT code:",
-    "purpose_label": "Призначення платежу (обов'язково при переказі):",
-    "accounts_title": "Рахунки для переказу",
-    "crypto_title": "Криптовалютні рахунки"
-  },
+
   "get_help": {
     "page_title": "Отримати допомогу | Bulwark",
     "tag": "Support Service",
