--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -119,8 +119,8 @@
     "title": "Funding Victory",
     "support_fund": "Support the Fund",
     "support_fund_text": "Administrative expenses, legal shield, logistics, and institutional development. A solid base for our work.",
-    "help_soldiers": "Help the Fighters",
-    "help_soldiers_text": "Direct purchase of equipment, medicine, and technical supplies for Belarusian fighters at the front.",
+    "help_soldiers": "Support the fighters",
+    "help_soldiers_text": "Legalization, legal and psychological assistance, and social rehabilitation",
     "requisites_btn": "Bank Details",
     "alert_enter_amount": "Please enter an amount",
     "alert_redirect": "Redirecting to payment:",
@@ -153,28 +153,7 @@
     "copied": "Copied!",
     "close": "Close"
   },
-  "contacts": {
-    "title": "Contacts",
-    "support_bot": "Support Bot",
-    "urgent_link": "Urgent Contact",
-    "confidential": "Confidential",
-    "page_title": "Contacts | Bulwark",
-    "subtitle": "Contact & Support",
-    "main_title": "Contacts and Details",
-    "sidebar_title": "Contacts",
-    "email_label": "Email",
-    "phone_label": "Phone / Signal",
-    "help_title": "Need Help?",
-    "help_desc": "For Belarusian volunteers: legal support, psychological aid, material support.",
-    "open_bot": "Open Telegram Bot",
-    "open_signal": "Contact via Signal",
-    "confidential_note": "*Confidentiality and security guaranteed",
-    "fund_support": "Support the Fund",
-    "fighters_support": "Support the Fighters",
-    "payment_purpose_label": "Payment purpose:",
-    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
-    "crypto_title": "Cryptocurrencies"
-  },
+
   "gallery": {
     "title_page": "Gallery | Bulwark",
     "copyright_text": "All gallery materials are the intellectual property of Bulwark. Unauthorized use of these materials is prohibited.",
@@ -238,35 +217,21 @@
       "bg_text": "Future"
     }
   },
-  "foundation": {
-    "title": "Support the Foundation",
-    "description": "Operations, administrative expenses, and logistics",
-    "purpose": "Charitable contribution for the implementation of the goals of the CF"
-  },
-  "soldiers": {
-    "title": "Support the Fighters",
-    "description": "Equipment, medicine, and technical means for volunteers",
-    "purpose": "Charitable contribution for the implementation of the goals of the charitable foundation"
-  },
-  "ui": {
-    "bank_title": "Bank Details",
-    "recipient": "Recipient:",
-    "edrpou": "EDRPOU Code:",
-    "bank_name": "Bank Name:",
-    "swift": "SWIFT code:",
-    "purpose_label": "Payment Purpose (mandatory for transfer):",
-    "accounts_title": "Accounts for transfer",
-    "crypto_title": "Cryptocurrency Accounts"
+  "contacts": {
+    "title": "Contacts",
+    "support_bot": "Support Bot",
+    "urgent_link": "Urgent Contact",
+    "confidential": "Confidential"
   },
   "get_help": {
     "page_title": "Get Help | Bulwark",
     "tag": "Support Service",
-    "main_title": "Help for volunteers",
-    "hero_text": "We support Belarusian volunteers and veterans (AFU / NGU) in critical matters of status and health.",
-    "form_section_title": "Submit a request",
-    "step1_title": "Secure connection",
-    "step1_text": "All data is transmitted through secure channels. You can use a callsign.",
-    "step2_title": "Processing",
+    "main_title": "Assistance for Fighters",
+    "hero_text": "We support Belarusian fighters and veterans (AFU / NGU) in critical matters of status and health.",
+    "form_section_title": "Submit a Request",
+    "step1_title": "Secure Communication",
+    "step1_text": "All data is transmitted via secure channels. You may use a call sign.",
+    "step2_title": "Service",
     "step2_text": "Our lawyers or psychologists will contact you within 48 hours.",
     "encrypted_label": "Protected by end-to-end encryption"
   },
@@ -301,13 +266,13 @@
     "hero_subtext": "Your help can be financial, expert, or media-based — every contribution brings us closer to a common goal: the safety of those who protect us.",
     "usage_title": "How funds are used",
     "item1_title": "Legal Shield",
-    "item1_text": "Legalization in Ukraine and legal consulting for soldiers.",
+    "item1_text": "Legalization in Ukraine and legal consulting for fighters",
     "item2_title": "Psychology",
-    "item2_text": "PTSD assistance and adaptation of soldiers to civilian life.",
+    "item2_text": "PTSD assistance and adaptation of fighters to civilian life.",
     "item3_title": "Future",
     "item3_text": "Personnel reserve and support for families of volunteers.",
     "finance_title": "Financial Contribution",
-    "donate_direct_title": "Help the soldiers/foundation",
+    "donate_direct_title": "Help the fighters/foundation",
     "donate_direct_text": "Direct financial support for our defenders via fast payments",
     "requisites_title": "Payment Options",
     "requisites_text": "Card online / Bank transfer / Cryptocurrencies",
