--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -119,8 +119,8 @@
     "title": "Финансирование победы",
     "support_fund": "Поддержать фонд",
     "support_fund_text": "Административные расходы, юридический щит, логистика и развитие институции. Прочная база для нашей работы.",
-    "help_soldiers": "Помощь бойцам",
-    "help_soldiers_text": "Прямая закупка снаряжения, медицины и технических средств для беларуских добровольцев на фронте.",
+    "help_soldiers": "Поддержать бойцов",
+    "help_soldiers_text": "Легализация, юридическая, психологическая помощь и социальная реабилитация",
     "requisites_btn": "Реквизиты",
     "alert_enter_amount": "Пожалуйста, введите сумму",
     "alert_redirect": "Переход к оплате:",
@@ -153,28 +153,7 @@
     "copied": "Скопировано!",
     "close": "Закрыть"
   },
-  "contacts": {
-    "title": "Контакты",
-    "support_bot": "Бот поддержки",
-    "urgent_link": "Срочная связь",
-    "confidential": "Конфиденциально",
-    "page_title": "Контакты | Bulwark",
-    "subtitle": "Связаться и поддержать",
-    "main_title": "Контакты и реквизиты",
-    "sidebar_title": "Контакты",
-    "email_label": "Почта",
-    "phone_label": "Телефон / Signal",
-    "help_title": "Нужна помощь?",
-    "help_desc": "Для белорусских добровольцев: правовая поддержка, психологическая помощь, материальная поддержка.",
-    "open_bot": "Открыть Telegram-бот",
-    "open_signal": "Связаться через Signal",
-    "confidential_note": "*Конфиденциальность и безопасность гарантированы",
-    "fund_support": "Поддержать фонд",
-    "fighters_support": "Поддержать бойцов",
-    "payment_purpose_label": "Назначение платежа:",
-    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
-    "crypto_title": "Криптовалюты"
-  },
+
   "gallery": {
     "title_page": "Галерея | Bulwark",
     "copyright_text": "Все материалы галереи являются интеллектуальной собственностью Bulwark. Использование этих материалов без разрешения запрещено.",
@@ -238,26 +217,13 @@
       "bg_text": "Future"
     }
   },
-  "foundation": {
-    "title": "Поддержать фонд",
-    "description": "Операционная деятельность, административные расходы и логистика",
-    "purpose": "Благодійний внесок на виконання цілей БФ"
+  "contacts": {
+    "title": "Контакты",
+    "support_bot": "Бот поддержки",
+    "urgent_link": "Срочная связь",
+    "confidential": "Конфиденциально"
   },
-  "soldiers": {
-    "title": "Поддержать бойцов",
-    "description": "Снаряжение, медицина и технические средства для добровольцев",
-    "purpose": "Благодійний внесок для виконання цілей благодійного фонду"
-  },
-  "ui": {
-    "bank_title": "Банковские реквизиты",
-    "recipient": "Получатель:",
-    "edrpou": "Код ЕГРПОУ:",
-    "bank_name": "Название банка:",
-    "swift": "SWIFT code:",
-    "purpose_label": "Назначение платежа (обязательно при переводе):",
-    "accounts_title": "Счета для перевода",
-    "crypto_title": "Криптовалютные счета"
-  },
+
   "get_help": {
     "page_title": "Получить помощь | Bulwark",
     "tag": "Support Service",
