--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -320,5 +320,12 @@
     "loading": "Загрузка...",
     "error": "Не удалось загрузить отчеты. Пожалуйста, попробуйте позже.",
     "more_btn": "Больше"
+  },
+  "zarok": {
+    "title": "Обет воина",
+    "content": "<p>Беларусь! Мать моя Родина!</p><p>Клянусь освобождать и защищать Тебя там, где нахожусь сейчас и куда приведет меня судьба Твоего освобождения.</p><p>Биться до победы за Твою свободу, как бились наши предки с ордынским гнетом московитов под Оршей, Смоленском, Полонкой.</p><p>Безжалостно гнать безродных опричников с земель Твоих, как гнали воины ВКЛ и белорусской шляхты, косинеры Костюшко и повстанцы Калиновского.</p><p>Защищать кровь Твоей нации, мощь Твоей земли и Божественный дух Твоего существования.</p><p>В рядах свободных братьев и в плену, на родине и в изгнании, в бою и в подполье.</p><p>Пусть руки мои сжимают оружие, пока виселицы не перестанут сжимать шеи сыновей Твоих.</p><p>Пусть лязг моего затвора не стихает, пока слышен лязг решеток за спинами героев Твоих.</p><p>Пусть хватит мне жизни, чтобы отомстить за всех замученных, изнасилованных и убитых детей Твоих.</p><p>До последнего блеска рек Твоих в моих глазах, пока будет слышен топот Погони в сердце моем.</p><p>Жить Тобой, умереть за Тебя, и возродить величие Твое.</p>",
+    "slogan": "Жыве Беларусь! Жыве вечна!",
+    "repeat_line1": "Беларусь! Мать моя Родина!",
+    "repeat_line2": "Клянусь освобождать и защищать Тебя..."
   }
 }
