--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -320,5 +320,12 @@
     "loading": "Завантаження...",
     "error": "Не вдалося завантажити звіти. Будь ласка, спробуйте пізніше.",
     "more_btn": "Більше"
+  },
+  "zarok": {
+    "title": "Обітниця воїна",
+    "content": "<p>Білорусь! Мати моя Батьківщино!</p><p>Присягаю визволяти та захищати Тебе там, де перебуваю зараз і куди приведе мене доля Твого визволення.</p><p>Битися да перемоги за Твою свободу, як билися наші предки з ординським гнітом московитів під Оршею, Смоленськом, Полонкою.</p><p>Безжально гнати безрідних опричників з земель Твоїх, як гнали воїни ВКЛ та білоруської шляхти, косинери Костюшка та повстанці Калиновського.</p><p>Захищати кров Твоєї нації, міць Твоєї землі та Божественний дух Твого існування.</p><p>У лавах вільних братів і в полоні, на батьківщині та у вигнанні, у бою та у підпіллі.</p><p>Нехай руки мої стискають зброю, доки шибениці не перестануть стискати шиї синів Твоїх.</p><p>Нехай брязкіт мого затвора не вщухає, доки чути брязкіт ґрат за спинами героїв Твоїх.</p><p>Нехай вистачить мені життя, щоб помститися за всіх закатованих, зґвалтованих і вбитих дітей Твоїх.</p><p>До останнього блиску річок Твоїх у моїх очах, доки буде чути тупіт Погоні у серці моєму.</p><p>Жити Тобою, померти за Тебе, і відродити велич Твою.</p>",
+    "slogan": "Живе Білорусь! Живе вічно!",
+    "repeat_line1": "Білорусь! Мати моя Батьківщино!",
+    "repeat_line2": "Присягаю визволяти та захищати Тебе..."
   }
 }
