--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -324,5 +324,12 @@
     "loading": "Загрузка...",
     "error": "Не атрымалася загрузіць справаздачы. Калі ласка, паспрабуйце пазней.",
     "more_btn": "Больш"
+  },
+  "zarok": {
+    "title": "Зарок ваяра",
+    "content": "<p>Беларусь! Маці мая Радзіма!</p><p>Клянуся вызваляць і бараніць Цябе там, дзе знаходжуся зараз і куды прывядзе мяне лёс Твайго вызвалення.</p><p>Біцца да перамогі за Тваю свабоду, як біліся нашы продкі з ардынскім прыгнётам маскавітаў пад Оршай, Смаленскам, Палонкай.</p><p>Бязлітасна гнаць бязродных апрычнікаў зямель Тваіх, як гналі ваяры ВКЛ і беларускай шляхты, касінеры Касцюшкі і паўстанцы Каліноўскага.</p><p>Бараніць кроў Тваёй нацыі, моц Тваёй зямлі і Боскі дух Твайго існавання.</p><p>У шэрагах вольных братоў і ў палоне, на айчыне і ў выгнанні, у баі і ў падполлі.</p><p>Няхай рукі маі сціскаюць зброю пакуль шыбеніцы не скончаць сціскаць шыі сыноў Тваіх.</p><p>Няхай лязг майго затвора не сціхае пакуль чутны лязг кратаў за спінамі герояў Тваіх.</p><p>Няхай хопіць мне жыцця каб адпомсціць за ўсіх закатаваных, згвалтаваных і забітых дзяцей Тваіх.</p><p>Да астанняга блеску рэк Тваіх у маіх вачах, пакуль будзе чутны тупат Пагоні ў сэрцы маім.</p><p>Жыць Табою, памерці за Цябе, і адрадзіць веліч Тваю.</p>",
+    "slogan": "Жыве Беларусь! Жыве вечна!",
+    "repeat_line1": "Беларусь! Маці мая Радзіма!",
+    "repeat_line2": "Клянуся вызваляць і бараніць Цябе..."
   }
 }
