fix photos and content in history section

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -42,13 +42,13 @@
     "tag": "Чалавечы фактар",
     "title": "Наша гісторыя",
     "lead": "Гісторыя «Bulwark» пачалася не ў офісе, а праз сустрэчу ўкраінкі з Харкава і беларускага добраахвотніка.",
-    "alisa_label": "Аліса <br> Харкаў",
-    "vlad_label": "Уладзіслаў («Соня»)<br> Мінск",
+    "alisa_label": "Аліса <br> г.Харкаў",
+    "vlad_label": "Уладзіслаў («Соня»)<br> г.Мінск",
     "link_youtube": "Глядзець фільм пра «Соню»",
     "link_viasna": "Гісторыя рэпрэсій",
     "alisa_name": "Аліса Касенка",
     "alisa_text": "нарадзілася ў Харкаве. Да 24 лютага 2022 года яна жыла звычайным жыццём, але пасля пачатку ўварвання прайшла праз абстрэлы і эвакуацыю. Яна вярнулася ва Украіну з цвёрдым рашэннем: гэта яе дом.",
-    "vlad_intro": "Яе любімы чалавек,",
+    "vlad_intro": "",
     "vlad_name": "Уладзіслаў Салавей (пазыўны «Соня»)",
     "vlad_text": "родам з Мінска. У 2020 годзе ён прайшоў праз рэпрэсіі і катаванні ў Акрэсціне. З пачаткам вялікай вайны ён без ваганняў паехаў ваяваць за свабоду Украіны.",
     "slogan_label": "Наш лозунг",
