--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -41,13 +41,13 @@
     "tag": "Human Factor",
     "title": "Our Story",
     "lead": "The story of Bulwark began not in an office, but through the meeting of a Ukrainian woman from Kharkiv and a Belarusian volunteer.",
-    "alisa_label": "Alisa <br> Kharkiv",
-    "vlad_label": "Vlad (Sonya)<br> Minsk",
+    "alisa_label": "Alisa <br> c.Kharkiv",
+    "vlad_label": "Vlad (Sonya)<br> c.Minsk",
     "link_youtube": "Watch the film about Sonya",
     "link_viasna": "History of repression",
     "alisa_name": "Alisa Kosenko",
     "alisa_text": "was born in Kharkiv. Until February 24, 2022, she lived an ordinary life, but after the invasion began, she went through shelling and evacuation. She returned to Ukraine with a firm decision: this is her home.",
-    "vlad_intro": "Her loved one,",
+    "vlad_intro": "",
     "vlad_name": "Vladislav Solovey (callsign Sonya)",
     "vlad_text": "is originally from Minsk. In 2020, he went through repression and torture in Akrestsina. With the start of the Great War, he did not hesitate to go and fight for the freedom of Ukraine.",
     "slogan_label": "Our Slogan",
