--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -41,13 +41,13 @@
     "tag": "Человеческий фактор",
     "title": "Наша история",
     "lead": "История «Bulwark» началась не в офисе, а со встречи украинки из Харькова и белорусского добровольца.",
-    "alisa_label": "Алиса <br> Харьков",
-    "vlad_label": "Влад («Соня»)<br> Минск",
+    "alisa_label": "Алиса <br> г.Харьков",
+    "vlad_label": "Влад («Соня»)<br> г.Минск",
     "link_youtube": "Смотреть фильм про «Соню»",
     "link_viasna": "История репрессий",
     "alisa_name": "Алиса Косенко",
     "alisa_text": "родилась в Харькове. До 24 февраля 2022 года она жила обычной жизнью, но после начала вторжения прошла через обстрелы и эвакуацию. Она вернулась в Украину с твердым решением: это её дом.",
-    "vlad_intro": "Её любимый человек,",
+    "vlad_intro": "",
     "vlad_name": "Владислав Соловей (позывной «Соня»)",
     "vlad_text": "родом из Минска. В 2020 году он прошел через репрессии и пытки на Окрестина. С началом большой войны он без колебаний поехал воевать за свободу Украины.",
     "slogan_label": "Наш лозунг",
