--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -41,13 +41,13 @@
     "tag": "Людський фактор",
     "title": "Наша історія",
     "lead": "Історія «Bulwark» почалася не в офісі, а через зустріч українки з Харкова та білоруського добровольця.",
-    "alisa_label": "Аліса <br> Харків",
-    "vlad_label": "Влад («Соня»)<br> Мінськ",
+    "alisa_label": "Аліса <br> м.Харків",
+    "vlad_label": "Влад («Соня»)<br> м.Мінськ",
     "link_youtube": "Дивитися фільм про «Соню»",
     "link_viasna": "Історія репресій",
     "alisa_name": "Аліса Косенко",
     "alisa_text": "народилася в Харкові. До 24 лютого 2022 року вона жила звичайним життям, але після початку вторгнення пройшла через обстріли та евакуацію. Вона повернулася в Україну з твердим рішенням: це її дім.",
-    "vlad_intro": "Її кохана людина,",
+    "vlad_intro": "",
     "vlad_name": "Владислав Соловей (позивний «Соня»)",
     "vlad_text": "родом із Мінська. У 2020 році він пройшов через репресії та катування в Окрестіна. З початком великої війни він без вагань поїхав воювати за свободу України.",
     "slogan_label": "Наше гасло",
