fix: update contact validation and improve localization

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -80,19 +80,19 @@
     "sec3_p1": "August 9, 2020, was a turning point. The regime responded with terror: tens of thousands of arrests, torture at Akrestsina. As of February 2026, more than 1,400 political prisoners remain behind bars."
   },
   "forms": {
-    "success_toast": "✅ Sent!",
-    "error_toast": "❌ Error.",
+    "success_toast": "✅ Sent successfully!",
+    "error_toast": "❌ Error occurred.",
     "tg_help_title": "🆘 HELP REQUEST",
-    "tg_partner_title": "🤝 NEW PARTNERSHIP OFFER",
+    "tg_partner_title": "🤝 NEW PARTNERSHIP PROPOSAL",
     "tg_name": "👤 Name",
     "tg_status": "🎖 Status",
     "tg_contact": "📱 Contact",
-    "tg_needs": "📝 Need",
+    "tg_needs": "📝 Needs",
     "tg_org": "🏢 Organization",
     "tg_message": "💬 Message",
-    "org": "Organization / Name",
-    "contact": "Email / Telegram",
-    "message": "How can we collaborate? (min. 10 characters)"
+    "org": "Organization / Name (min. 2 chars)",
+    "contact": "Email (xxx@xx.xxx) / Phone (+...)",
+    "message": "How can we cooperate? (min. 10 chars)"
   },
   "activity": {
     "tag": "Fields of Work",
@@ -237,26 +237,26 @@
   },
   "volunteers": {
     "tag": "Assistance",
-    "title": "Assistance to Volunteers",
+    "title": "Help for Volunteers",
     "crit1_title": "For whom:",
-    "crit1_text": "Only for Belarusian volunteers (active military and veterans) who are fighting or have fought as part of the AFU / NGU.",
-    "crit1_text_short": "Active military and Belarusian veterans.",
+    "crit1_text": "Only for Belarusian fighters (active-duty military and veterans) who are fighting or have fought within the AFU / NGU.",
+    "crit1_text_short": "Active-duty military and veterans from Belarus.",
     "crit2_title": "What we provide:",
     "crit2_text": "Legalization consultations, document recovery, professional psychological support.",
     "crit2_text_short": "Legalization, extradition, PTSD support, document recovery.",
-    "warning": "Important: We do not collect funds for weapons or ammunition. Our task is your legal and mental status.",
+    "warning": "Important: We do not collect funds for weapons or ammunition. Our mission is your legal and mental status.",
     "name_label": "Name / Callsign",
-    "name_placeholder": "Name / Callsign",
+    "name_placeholder": "Name / Callsign (min. 2 chars)",
     "status_label": "Status",
     "status_select": "Status (select from list)",
-    "status_active": "Active Military",
+    "status_active": "Active-duty military",
     "status_veteran": "Veteran",
-    "status_family": "Volunteer's Family",
-    "needs_label": "Essence of the problem",
-    "needs_placeholder": "What help is needed? (min. 10 characters)",
+    "status_family": "Family of a fighter",
+    "needs_label": "Nature of the issue",
+    "needs_placeholder": "What help do you need? (min. 10 chars)",
     "contact_label": "Contact (Signal / Telegram)",
-    "contact_placeholder": "Telegram @user or Signal",
-    "btn_send": "Submit Request"
+    "contact_placeholder": "Telegram/Signal(@user) or Phone(+...)",
+    "btn_send": "Send request"
   },
   "support": {
     "page_title": "Support | Bulwark",
@@ -270,7 +270,7 @@
     "item2_title": "Psychology",
     "item2_text": "PTSD assistance and adaptation of fighters to civilian life.",
     "item3_title": "Future",
-    "item3_text": "Personnel reserve and support for families of volunteers.",
+    "item3_text": "Personnel reserve and support for families of fighters.",
     "finance_title": "Financial Contribution",
     "donate_direct_title": "Help the fighters/foundation",
     "donate_direct_text": "Direct financial support for our defenders via fast payments",
