--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -90,8 +90,8 @@
     "tg_needs": "📝 Потребность",
     "tg_org": "🏢 Организация",
     "tg_message": "💬 Сообщение",
-    "org": "Организация / Имя",
-    "contact": "Email / Telegram",
+    "org": "Организация / Имя (мин. 2 символа)",
+    "contact": "Email (xxx@xx.xxx) / Phone (+...)",
     "message": "Как мы можем сотрудничать? (мин. 10 символов)"
   },
   "activity": {
@@ -247,7 +247,7 @@
     "crit2_text_short": "Легализация, экстрадиция, ПТСР-помощь, восстановление документов.",
     "warning": "Важно: Мы не занимаемся сбором на оружие или амуницию. Наша задача — ваш правовой и ментальный статус.",
     "name_label": "Имя / Позывной",
-    "name_placeholder": "Имя / Позывной",
+    "name_placeholder": "Имя / Позывной (мин. 2 символа)",
     "status_label": "Статус",
     "status_select": "Статус (выберите из списка)",
     "status_active": "Действующий военнослужащий",
@@ -256,7 +256,7 @@
     "needs_label": "Суть проблемы",
     "needs_placeholder": "Какая помощь нужна? (мин. 10 символов)",
     "contact_label": "Контакт (Signal / Telegram)",
-    "contact_placeholder": "Telegram @user или Signal",
+    "contact_placeholder": "Telegram/Signal(@user) или Phone(+...)",
     "btn_send": "Отправить запрос"
   },
   "support": {
