--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -90,8 +90,8 @@
     "tg_needs": "📝 Потреба",
     "tg_org": "🏢 Організація",
     "tg_message": "💬 Повідомлення",
-    "org": "Організація / Ім'я",
-    "contact": "Email / Telegram",
+    "org": "Організація / Ім'я (мін. 2 символи)",
+    "contact": "Email (xxx@xx.xxx) / Phone (+38...)",
     "message": "Як ми можемо співпрацювати? (мін. 10 символів)"
   },
   "activity": {
@@ -240,23 +240,23 @@
     "tag": "Допомога",
     "title": "Допомога добровольцям",
     "crit1_title": "Для кого:",
-    "crit1_text": "Тільки для білоруських добровольців (діючих військових та ветеранів), які воюють або воювали у складі ЗСУ / НГУ.",
+    "crit1_text": "Тільки для білоруських добровольців (діючих військовослужбовців та ветеранів), які воюють або воювали у складі ЗСУ / НГУ.",
     "crit1_text_short": "Діючі військові та ветерани-білоруси.",
-    "crit2_title": "Що даємо:",
+    "crit2_title": "Що надаємо:",
     "crit2_text": "Консультації з легалізації, відновлення документів, професійна психологічна підтримка.",
     "crit2_text_short": "Легалізація, екстрадиція, ПТСР-допомога, відновлення документів.",
-    "warning": "Важливо: Ми не займаємося збором на зброю чи амуніцію. Наша задача — ваш правовий і ментальний статус.",
+    "warning": "Важливо: Ми не займаємося збором на зброю чи амуніцію. Наше завдання — ваш правовий та ментальний статус.",
     "name_label": "Ім'я / Позивний",
-    "name_placeholder": "Ім'я / Позивний",
+    "name_placeholder": "Ім'я / Позивний (мін. 2 символи)",
     "status_label": "Статус",
     "status_select": "Статус (оберіть зі списку)",
-    "status_active": "Діючий військовий",
+    "status_active": "Діючий військовослужбовець",
     "status_veteran": "Ветеран",
     "status_family": "Сім'я добровольця",
     "needs_label": "Суть проблеми",
     "needs_placeholder": "Яка допомога потрібна? (мін. 10 символів)",
     "contact_label": "Контакт (Signal / Telegram)",
-    "contact_placeholder": "Telegram @user або Signal",
+    "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
     "btn_send": "Відправити запит"
   },
   "support": {
