--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -92,8 +92,8 @@
     "tg_needs": "📝 Патрэба",
     "tg_org": "🏢 Арганізацыя",
     "tg_message": "💬 Паведамленне",
-    "org": "Арганізацыя / Імя",
-    "contact": "Email / Telegram",
+    "org": "Арганізацыя / Імя (мін.2 сімвалы)",
+    "contact": "Email (xxx@xx.xxx) / Phone (+38...)",
     "message": "Як мы можам супрацоўнічаць? (мін. 10 сімвалаў)"
   },
   "activity": {
@@ -250,7 +250,7 @@
     "crit2_text_short": "Легалізацыя, экстрадыцыя, ПТСР-дапамога, аднаўленне дакументаў.",
     "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус.",
     "name_label": "Імя / Пазыўны",
-    "name_placeholder": "Імя / Пазыўны",
+    "name_placeholder": "Імя / Пазыўны (мін.2 сімвалы)",
     "status_label": "Статус",
     "status_select": "Статус (абярыце са спіса)",
     "status_active": "Дзейны вайсковец",
@@ -259,7 +259,7 @@
     "needs_label": "Сутнасць праблемы",
     "needs_placeholder": "Якая дапамога патрэбна? (мін. 10 сімвалаў)",
     "contact_label": "Кантакт (Signal / Telegram)",
-    "contact_placeholder": "Telegram @user або Signal",
+    "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
     "btn_send": "Адправіць запыт"
   },
   "support": {
