change absolute content on grid in grid in story partial

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -42,7 +42,7 @@
     "title": "Our Story",
     "lead": "The story of Bulwark began not in an office, but through the meeting of a Ukrainian woman from Kharkiv and a Belarusian volunteer.",
     "alisa_label": "Alisa <br> c.Kharkiv",
-    "vlad_label": "Vlad (Sonya)<br> c.Minsk",
+    "vlad_label": "Vladislav (Sonya)<br> c.Minsk",
     "link_youtube": "Watch the film about Sonya",
     "link_viasna": "History of repression",
     "alisa_name": "Alisa Kosenko",
