--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -42,7 +42,7 @@
     "title": "Наша история",
     "lead": "История «Bulwark» началась не в офисе, а со встречи украинки из Харькова и белорусского добровольца.",
     "alisa_label": "Алиса <br> г.Харьков",
-    "vlad_label": "Влад («Соня»)<br> г.Минск",
+    "vlad_label": "Владислав («Соня»)<br> г.Минск",
     "link_youtube": "Смотреть фильм про «Соню»",
     "link_viasna": "История репрессий",
     "alisa_name": "Алиса Косенко",
