--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -42,7 +42,7 @@
     "title": "Наша історія",
     "lead": "Історія «Bulwark» почалася не в офісі, а через зустріч українки з Харкова та білоруського добровольця.",
     "alisa_label": "Аліса <br> м.Харків",
-    "vlad_label": "Влад («Соня»)<br> м.Мінськ",
+    "vlad_label": "Владислав («Соня»)<br> м.Мінськ",
     "link_youtube": "Дивитися фільм про «Соню»",
     "link_viasna": "Історія репресій",
     "alisa_name": "Аліса Косенко",
