--- a/public/locales/seo-ru.json
+++ b/public/locales/seo-ru.json
@@ -53,6 +53,17 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Контакты | Bulwark Fund",
       "twitter_description": "Контакты и реквизиты для помощи. | Contact and support details."
+    },
+    "seo": {
+      "gallery": {
+        "title": "Галерея | Живая история | Bulwark Fund",
+        "description": "История белорусского добровольческого движения в фотографиях.",
+        "og_title": "Галерея Bulwark Fund",
+        "og_description": "Визуальная история белорусского добровольческого движения в Украине.",
+        "og_site_name": "Bulwark Fund",
+        "twitter_title": "Галерея Bulwark Fund",
+        "twitter_description": "История белорусского добровольческого движения в фотографиях."
+      }
     }
   }
 }
