--- a/public/locales/seo-uk.json
+++ b/public/locales/seo-uk.json
@@ -53,6 +53,17 @@
       "og_site_name": "Bulwark Fund",
       "twitter_title": "Контакти | Bulwark Fund",
       "twitter_description": "Контакти та реквізити для допомоги. | Contact and support details."
+    },
+    "seo": {
+      "gallery": {
+        "title": "Галерея | Жива історія | Bulwark Fund",
+        "description": "Історія білоруського добровольчого руху у фотографіях.",
+        "og_title": "Галерея Bulwark Fund",
+        "og_description": "Візуальна історія білоруського добровольчого руху в Україні.",
+        "og_site_name": "Bulwark Fund",
+        "twitter_title": "Галерея Bulwark Fund",
+        "twitter_description": "Історія білоруського добровольчого руху у фотографіях."
+      }
     }
   }
 }
