refactor: externalize gallery strings to i18n keys and update JSON structure

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -159,7 +159,8 @@
   },
 
   "gallery": {
-    "title_page": "Галерэя | Bulwark",
+    "label": "Галерэя",
+    "copyright_label": "Copyright:",
     "copyright_text": "Усе матэрыялы галерэі з'яўляюцца інтэлектуальнай уласнасцю Bulwark. Выкарыстанне гэтых матэрыялаў без дазволу забаронена.",
     "history_text": "Гэтыя кадры — жывая гісторыя барацьбы беларускіх добраахвотнікаў.",
     "victory_text": "Разам да перамогі."
