--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -155,7 +155,8 @@
   },
 
   "gallery": {
-    "title_page": "Gallery | Bulwark",
+    "label": "Gallery",
+    "copyright_label": "Copyright:",
     "copyright_text": "All gallery materials are the intellectual property of Bulwark. Unauthorized use of these materials is prohibited.",
     "history_text": "These shots are a living history of the struggle of Belarusian volunteers.",
     "victory_text": "Together to victory."
