--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -155,7 +155,8 @@
   },
 
   "gallery": {
-    "title_page": "Галерея | Bulwark",
+    "label": "Галерея",
+    "copyright_label": "Copyright:",
     "copyright_text": "Все материалы галереи являются интеллектуальной собственностью Bulwark. Использование этих материалов без разрешения запрещено.",
     "history_text": "Эти кадры — живая история борьбы белорусских добровольцев.",
     "victory_text": "Вместе к победе."
