--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -155,7 +155,8 @@
   },
 
   "gallery": {
-    "title_page": "Галерея | Bulwark",
+    "label": "Галерея",
+    "copyright_label": "Copyright:",
     "copyright_text": "Усі матеріали галереї є інтелектуальною власністю Bulwark. Використання цих матеріалів без дозволу заборонено.",
     "history_text": "Ці кадри — жива історія боротьби білоруських добровольців.",
     "victory_text": "Разом да перемоги."
